@@ -18,6 +18,7 @@ added showcols command that was missing.
 handle hidden rows/cols in undo/redo of ir/ic/dr/dc
 handled issue #374
 added backwards search with '?'
+restore \\* from old SC. \\{char} fills the cell with n occurrences of {char} to complete its width
 
 
 Pending
@@ -25,6 +26,7 @@ Pending
 handle mouse clicks in edition mode.
 Restore comments from old SC?
 handle content alignment over multiple lines in cmds.c:pad_and_align
+restore \\" from old SC?
 
 
 Rethink LUA evaluation
